fix the alignment of dynamic loading ball spinner to be centered

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -133,7 +133,7 @@ h2
     position: absolute;
     display: block;
     background-color: #03156f;
-    left: 24px;
+    left: 0px;
     width: 13px;
     height: 13px;
     border-radius: 6px;
